# TreeEx

./: .gitignore  CMakeLists.txt
inc/: analyzer.h  node.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  analyzer.cpp  main.cpp  node.cpp
